# dnd-living-world

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.ps1  docker-compose.yml  nginx.conf  supervisord.conf
backend/: Dockerfile  db.py  llm_provider.py  main.py  pyproject.toml  requirements.txt  state.py
backend/agents/: dm_agent.py  graph.py  lore_agent.py  opening_scene.py  vibe_architect.py
backend/mechanics/: dice.py  mechanics_node.py  open5e.py
backend/memory/: checkpointer.py  lore.py  session.py
frontend/: package-lock.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DynamicSlot.tsx
frontend/src/components/dynamic/: CombatHUD.tsx  DungeonCombatScene.tsx  DungeonScene.tsx  EnvironmentBanner.tsx  ForestCombatScene.tsx  ForestScene.tsx  LootDisplay.tsx  NarrativeCard.tsx  SpellEffect.tsx  TavernScene.tsx
frontend/src/components/panels/: LeftPanel.module.css  LeftPanel.tsx  MapViewport.module.css  MapViewport.tsx  NarrativePanel.module.css  NarrativePanel.tsx  RightPanel.module.css  RightPanel.tsx  TopBar.tsx  Topbar.module.css
frontend/src/hooks/: useGameStream.ts
frontend/src/store/: diceStore.ts  gameStore.ts
frontend/src/styles/: themes.css
